Signup and Signout works

--- a/templates/login.html
+++ b/templates/login.html
@@ -2,4 +2,27 @@
 
 {% block content %}
 
+<h1>Login</h1>
+{% with messages = get_flashed_messages(with_categories=True) %}
+{% for category, messages in messages %}
+<div><p class="{{category}}">{{messages}}</p></div>
+{% endfor %} 
+{% endwith %}
+<form action='/login' method='post'>
+    <form method="post">
+    <label>
+        <div>Username:</div>
+        <input type="text" name='username' value='{{username}}' />
+    </label>
+    <label>
+        <div>Password:</div>
+        <input type="password" name="password" />
+    </label>
+    <div><input type="submit" value="Login"></div>
+
+</form>
+<div>If you are not signed up with an account, please sign up <a href="/signup">here</a></div>
+
+    
+
 {% endblock %}
