--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,9 @@
         <nav>
             <a href="/blog">Blog</a>
             <a href="/newpost">New Post</a>
+            <a href="/login"> Log In</a>
+            <a href="/signup">Signup</a>
+            <a href="/logout">Log Out</a>
         </nav>
     </head>
 <body>
