--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,8 @@
         <link rel="stylesheet" type="text/css" href="{{url_for('static',filename='styles/main.css')}}">
         <title>{{title}}</title>
         <nav>
-            <a href="/blog">Blog</a>
+            <a href="/">Home</a>
+            <a href="/blog">All Posts</a>
             <a href="/newpost">New Post</a>
             <a href="/login"> Log In</a>
             <a href="/signup">Signup</a>
