--- a/templates/blog.html
+++ b/templates/blog.html
@@ -3,14 +3,14 @@
 {% block content %}
 
     <h2>Blog Posts</h2>
-
-        {% for blog in posted_blog %}
-        <div>
-            <h2><a href="./selected_blog?id={{blog.id}}">{{blog.title}}</a></h2>
-            <p>{{blog.body}}</p>
-        </div>
+        <ul>
+        {% for post in posts %}
+            <li>
+            <h3><a href="/blog?id={{post.id}}">{{post.title}}</a></h3>
+            <p>{{post.body}}</p>
+            </li>
+        </ul>
         {% endfor %}
-
 {% endblock %}
 
 
