--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
 <h1>Users</h1>
 {% for user in users %}
 <li>
-    <a href="/blog?uid={{user.id}}">{{user.username}}</a>
+    <a href="/blog?user={{user.id}}">{{user.username}}</a>
 </li>
 {% endfor %}
 
