Fixed flash msg for logging in

--- a/templates/base.html
+++ b/templates/base.html
@@ -13,9 +13,9 @@
         </nav>
     </head>
 <body>
+    <!-- Display flashed messages with categories -->
 
     {% block content %}
     {% endblock %}
-
 </body>
 </html>
