--- a/templates/blog.html
+++ b/templates/blog.html
@@ -7,7 +7,7 @@
         {% for post in posts %}
             <h3><a href="./blog?id={{post.id}}">{{post.title}}</a></h3>
             <p>{{post.body}}</p>
-            <p><a href="./blog?user={{post.owner.id}}">{{post.owner.username}}</a></p>
+            <p>Posted by <a href="./blog?user={{post.owner.id}}">{{post.owner.username}}</a> on {{post.pub_date}}</p>
         {% endfor %}
 {% endblock %}
 
