--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,15 @@
 {% extends "base.html" %}
 
 {% block content %}
-
-<h1>Users</h1>
-{% for user in users %}
-<li>
-    <a href="/blog?user={{user.id}}">{{user.username}}</a>
-</li>
-{% endfor %}
-
+        <div class="jumbotron">
+            <div class="container">
+                <h1>Welcome!</h1>
+                <p>Users</p>
+                {% for user in users %}
+                <li>
+                    <a href="/blog?user={{user.id}}">{{user.username}}</a>
+                </li>
+                {% endfor %}
+            </div>
+        </div>
 {% endblock %}
