--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#">Playa Tribune</a>
+                    <a class="navbar-brand" href="/">Playa Tribune</a>
                 </div>
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav navbar-right">
@@ -31,9 +31,8 @@
     </head>
 <body>
     <!-- Display flashed messages with categories -->
-
-    {% block content %}
-    {% endblock %}
+        {% block content %}
+        {% endblock %}
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </body>
